src/types/tests/snapshots/tgbot__types__tests__gift__accepted_gift_types-2.snap
---
source: src/types/tests/gift.rs
expression: expected_struct
---
{
  "limited_gifts": true,
  "premium_subscription": true,
  "unique_gifts": true,
  "unlimited_gifts": true
}
