src/types/tests/snapshots/tgbot__types__tests__gift__accepted_gift_types.snap
---
source: src/types/tests/gift.rs
expression: expected_struct
---
{
  "gifts_from_channels": false,
  "limited_gifts": false,
  "premium_subscription": false,
  "unique_gifts": false,
  "unlimited_gifts": false
}
