src/types/tests/snapshots/tgbot__types__tests__gift__get_business_account_gifts-2.snap
---
source: src/types/tests/gift.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "exclude_from_blockchain": false,
  "exclude_limited_non_upgradable": true,
  "exclude_limited_upgradable": false,
  "exclude_saved": true,
  "exclude_unique": false,
  "exclude_unlimited": true,
  "exclude_unsaved": false,
  "limit": 10,
  "offset": "test",
  "sort_by_price": true
}
