src/types/tests/snapshots/tgbot__types__tests__gift__gift-2.snap
---
source: src/types/tests/gift.rs
expression: "expected_struct.with_publisher_chat(PrivateChat::new(1,\n\"John\")).with_remaining_count(10).with_total_count(20).with_upgrade_star_count(30)"
---
{
  "id": "id",
  "star_count": 100,
  "sticker": {
    "file_id": "file-id",
    "file_unique_id": "file-unique-id",
    "height": 512,
    "is_animated": false,
    "is_video": false,
    "type": "regular",
    "width": 512
  },
  "publisher_chat": {
    "type": "private",
    "id": 1,
    "first_name": "John"
  },
  "remaining_count": 10,
  "total_count": 20,
  "upgrade_star_count": 30
}
