src/types/tests/snapshots/tgbot__types__tests__gift__gift_info-2.snap
---
source: src/types/tests/gift.rs
expression: "expected_struct.with_can_be_upgraded(true).with_convert_star_count(100).with_entities([TextEntity::bold(0..2)]).with_is_private(true).with_is_upgrade_separate(false).with_owned_gift_id(\"id\").with_prepaid_upgrade_star_count(100).with_text(\"test\").with_unique_gift_number(200)"
---
{
  "gift": {
    "id": "id",
    "star_count": 100,
    "sticker": {
      "file_id": "file-id",
      "file_unique_id": "file-unique-id",
      "height": 512,
      "is_animated": false,
      "is_video": false,
      "type": "regular",
      "width": 512
    }
  },
  "can_be_upgraded": true,
  "convert_star_count": 100,
  "entities": [
    {
      "offset": 0,
      "length": 2,
      "type": "bold"
    }
  ],
  "is_private": true,
  "is_upgrade_separate": false,
  "owned_gift_id": "id",
  "prepaid_upgrade_star_count": 100,
  "text": "test",
  "unique_gift_number": 200
}
