src/types/tests/snapshots/tgbot__types__tests__gift__gift_premium_subscription-2.snap
---
source: src/types/tests/gift.rs
expression: actual_data
---
{
  "month_count": 1,
  "star_count": 2,
  "text": "text",
  "text_entities": [
    {
      "length": 2,
      "offset": 0,
      "type": "bold"
    }
  ],
  "user_id": 3
}
